--- a/Coming-Soon-Page.html
+++ b/Coming-Soon-Page.html
@@ -34,7 +34,7 @@
             announcements and our launch deals.<br><br><br><br>
             <input style="color: black" type="text" id="Email" placeholder="Email Address"value="">
             <img src="icon-error.svg" id="error" style="display: none" alt="Error">
-            <button class="button" type="button" onkeypress="myFunction()">
+            <button class="button" type="button">
                 <svg id="arrow" xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path 
                     fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
             </button>
@@ -53,8 +53,6 @@ function validateEmail(email) {
         return false;
     }
 }
-
-
     let btn = document.querySelector('button');
     let input = document.querySelector('input');
     let message = document.getElementById('message');
