Changing name to css file link so that it links correctly again.

--- a/Coming-Soon-Page.html
+++ b/Coming-Soon-Page.html
@@ -2,23 +2,23 @@
 <html>
 
 <head>
-    <link href="site.css" rel="stylesheet">
+    <link href="Coming-Soon-Page.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <main>
         <section class="logo" id="logo">
-            <img src="logo.svg" alt="logo">
+            <img src="images/logo.svg" alt="logo">
         </section>
         <section class="images">  
             <div class="background">
-                <img src="bg-pattern-desktop.svg" alt="Background">
+                <img src="images/bg-pattern-desktop.svg" alt="Background">
             </div>
             <picture>
-                <source media="(orientation: landscape)" srcset="hero-desktop.jpg" sizes="(min-width: 376px)">
-                <source media="(orientation: portrait)" srcset="hero-mobile.jpg 375w" sizes="(max-width: 375px)">
-                <img src="hero-desktop.jpg" alt="Portrait of a Girl">
+                <source media="(orientation: landscape)" srcset="images/hero-desktop.jpg" sizes="(min-width: 376px)">
+                <source media="(orientation: portrait)" srcset="images/hero-mobile.jpg 375w" sizes="(max-width: 375px)">
+                <img src="images/hero-desktop.jpg" alt="Portrait of a Girl">
             </picture> 
         </section>
         <section class="container">
@@ -33,7 +33,7 @@
             fashion store. Add your email below to stay up-to-date with <br><br>
             announcements and our launch deals.<br><br><br><br>
             <input style="color: black" type="text" id="Email" placeholder="Email Address"value="">
-            <img src="icon-error.svg" id="error" style="display: none" alt="Error">
+            <img src="images/icon-error.svg" id="error" style="display: none" alt="Error">
             <button class="button" type="button">
                 <svg id="arrow" xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path 
                     fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
